--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -298,37 +298,25 @@
                 </figure>
               </div>
               <div class="resposta">
-  <div class="resposta">
-    <strong>Resposta 4.</strong>
-    <p>O problema pede a energia restante de um feixe de prótons de 5 MeV após atravessar 100 µm de silício (Si). O gráfico fornece a relação entre a <em>range</em> (profundidade total, em µm) e a energia de prótons em Si. Sabendo que a partícula perde energia progressivamente até parar, podemos estimar a energia residual com base na fração de material atravessado.</p>
+  <strong>Resposta 4.</strong>
+  <p>O exercício pede para estimar qual seria a energia restante de um feixe de prótons de 5 MeV depois de atravessar 100 µm de silício. Pela figura, consigo relacionar a energia da partícula com o alcance total (em µm) no material. Como o próton vai perdendo energia gradualmente até parar, dá para estimar o quanto ainda resta observando a fração da espessura que ele percorreu.</p>
 
-    <h4>Passo 1 – Determinar o alcance total de um próton de 5 MeV em Si</h4>
-    <ul>
-      <li>Localize 5 MeV no eixo x (energia de partícula).</li>
-      <li>Siga a linha vertical até interceptar a curva “Protons”.</li>
-      <li>A partir do ponto de interseção, trace horizontalmente até o eixo y (alcance em µm).</li>
-      <li>O alcance total é aproximadamente <strong>300 µm</strong> para prótons de 5 MeV.</li>
-    </ul>
+  <h4>Passo 1 – Determinar o alcance total de um próton de 5 MeV em Si</h4>
+  <p>No gráfico, localizei 5 MeV no eixo da energia e segui a linha vertical até a curva dos “Protons”. Depois, tracei uma linha horizontal até o eixo do alcance. A leitura indica que o alcance total é de aproximadamente <strong>300 µm</strong> para prótons de 5 MeV.</p>
 
-    <h4>Passo 2 – Calcular a fração do alcance percorrido</h4>
-    <ul>
-      <li>O próton atravessa 100 µm de Si.</li>
-      <li>Fração percorrida: \( \dfrac{100}{300} = \dfrac{1}{3} \).</li>
-    </ul>
+  <h4>Passo 2 – Calcular a fração do alcance percorrido</h4>
+  <p>Como o feixe atravessa 100 µm de silício, ele percorre cerca de um terço do alcance total:</p>
+  <p style="text-align:center;">\( \dfrac{100}{300} = \dfrac{1}{3} \)</p>
 
-    <h4>Passo 3 – Estimar a energia restante após 100 µm</h4>
-    <p>No gráfico log–log, a relação entre alcance e energia é aproximadamente da forma \( R = aE^b \).</p>
-    <ul>
-      <li>Se o próton percorreu 1/3 do seu alcance total, ainda resta energia correspondente a um alcance de \( R_{\text{rest}} = 300 - 100 = 200\,\mu\text{m} \).</li>
-      <li>No gráfico, localize \( 200\,\mu\text{m} \) no eixo y e mova até a curva “Protons”, depois desça até o eixo x.</li>
-      <li>A energia correspondente é cerca de <strong>3,5 MeV</strong>.</li>
-    </ul>
+  <h4>Passo 3 – Estimar a energia restante</h4>
+  <p>Sabendo que o gráfico é aproximadamente linear em escala log–log, a relação entre alcance e energia pode ser escrita como \( R = aE^b \). Se o próton já percorreu 1/3 do alcance, ainda resta um trecho de \( R_{\text{rest}} = 300 - 100 = 200\,\mu\text{m} \).</p>
+  <p>Olhando novamente o gráfico, para um alcance de 200 µm, a energia correspondente é de aproximadamente <strong>3,5 MeV</strong>.</p>
 
-    <h4>Passo 4 – Concluir a energia remanescente</h4>
-    <p>Após atravessar 100 µm de Si, a energia restante do feixe de prótons é aproximadamente <strong>3,5 MeV</strong>.</p>
+  <h4>Passo 4 – Conclusão</h4>
+  <p>Portanto, depois de atravessar 100 µm de Si, o feixe de prótons de 5 MeV ainda possui cerca de <strong>3,5 MeV</strong> de energia.</p>
 
-    <p class="muted"><em>Resposta final:</em> A energia remanescente de um feixe de prótons de 5 MeV após passar por 100 µm de silício é aproximadamente <strong>3,5 MeV</strong>.</p>
-  </div>
+  <p class="muted"><em>Resposta final:</em> a energia remanescente de um feixe de prótons de 5 MeV após atravessar 100 µm de silício é aproximadamente <strong>3,5 MeV</strong>.</p>
+</div>
 
             </li>
 
@@ -436,32 +424,52 @@
             <!-- Q7 -->
             <li id="q7">
               <div class="enunciado">
-                <strong>Repetir o exercício 8 usando um feixe de partículas alfa de 3 MeV em ouro.</strong>
+                <strong>Repetir o exercício anterior usando um feixe de partículas alfa de 3 MeV em ouro.</strong>
                 <p>(use a figura do exercício 6).</p>
               </div>
 <div class="resposta">
   <strong>Resposta 7.</strong>
-  <p><em>Leitura do gráfico (Fig. 2.7, “Alphas” em Si):</em> para partículas alfa de \(3\,\text{MeV}\), o alcance em silício é aproximadamente
-  \( R_{\text{Si}} \approx 10\text{–}12\,\mu\text{m} \) (escala log–log).</p>
+  <p>Para determinar a espessura equivalente em ouro de elétrons de 3 MeV, utilizei o gráfico para obter a espessura mássica em silício e, em seguida, apliquei a lei de Bragg–Kleeman para fazer a conversão para o ouro.</p>
 
-  <p>Aplicando a lei de Bragg–Kleeman para estimar o alcance no ouro:
-  \[
-    \frac{R_{\text{Au}}}{R_{\text{Si}}}
-      = \frac{\rho_{\text{Si}}}{\rho_{\text{Au}}}\cdot\frac{A_{\text{Au}}}{A_{\text{Si}}}
-      = \frac{2{,}33}{19{,}32}\cdot\frac{197{,}0}{28{,}09}
-      \approx 0{,}846.
-  \]
-  Portanto, \( R_{\text{Au}} \approx 0{,}846\,R_{\text{Si}} \).</p>
+  <h4>Passo 1 – Leitura da espessura mássica em silício</h4>
+  <p>A partir da figura, para elétrons de \(3\,\text{MeV}\) em silício, obtive:</p>
+  <p style="text-align:center;">\((R\rho)_{\text{Si}} \approx 2{,}2\,\text{g/cm}^2.\)</p>
 
-  <p><strong>Resultado numérico:</strong>
-    para \( R_{\text{Si}}=10\,\mu\text{m} \Rightarrow R_{\text{Au}}\approx 8{,}5\,\mu\text{m} \);
-    para \( R_{\text{Si}}=12\,\mu\text{m} \Rightarrow R_{\text{Au}}\approx 10{,}2\,\mu\text{m} \).
-    Assim, a espessura de ouro que <em>pára</em> alfas de \(3\,\text{MeV}\) é da ordem de
-    \(\mathbf{9\pm1\,\mu\text{m}}\).
+  <h4>Passo 2 – Aplicar a lei de Bragg–Kleeman</h4>
+  <p>A relação entre os alcances em dois materiais (1 e 2) é dada por:</p>
+  <p style="text-align:center;">
+    \(\displaystyle \frac{R_2}{R_1} = \frac{\rho_1}{\rho_2}\cdot\frac{A_2}{A_1}\)
+  </p>
+  <p>Logo, a espessura mássica em ouro será:</p>
+  <p style="text-align:center;">
+    \((R\rho)_{\text{Au}} = (R\rho)_{\text{Si}} \cdot \frac{A_{\text{Au}}}{A_{\text{Si}}}\)
   </p>
 
-  <p class="muted">Observação: a lei de Bragg–Kleeman é apropriada a partículas carregadas pesadas; a incerteza decorre da leitura do gráfico em Si.</p>
+  <h4>Passo 3 – Substituir os valores</h4>
+  <ul>
+    <li>\((R\rho)_{\text{Si}} = 2{,}2\,\text{g/cm}^2\)</li>
+    <li>\(A_{\text{Si}} = 28{,}09\)</li>
+    <li>\(A_{\text{Au}} = 196{,}97\)</li>
+  </ul>
+  <p style="text-align:center;">
+    \((R\rho)_{\text{Au}} = 2{,}2 \times \frac{196{,}97}{28{,}09} \approx 15{,}4\,\text{g/cm}^2.\)
+  </p>
+
+  <h4>Passo 4 – Converter para espessura linear</h4>
+  <p>Dividindo pela densidade do ouro \(\rho_{\text{Au}} = 19{,}32\,\text{g/cm}^3\):</p>
+  <p style="text-align:center;">
+    \(R_{\text{Au}} = \dfrac{(R\rho)_{\text{Au}}}{\rho_{\text{Au}}} = \dfrac{15{,}4}{19{,}32} \approx 0{,}80\,\text{cm}.\)
+  </p>
+
+  <h4>Resultado final</h4>
+  <ul>
+    <li>Espessura mássica em ouro: <strong>15,4 g/cm²</strong></li>
+    <li>Espessura linear correspondente: <strong>0,80 cm</strong></li>
+  </ul>
+
+  <p class="muted"><em>Conclusão:</em> a espessura de ouro equivalente à atenuação de elétrons de 3 MeV é de aproximadamente <strong>0,8 cm</strong>.</p>
 </div>
+
 
             </li>
 
