--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -213,22 +213,24 @@
           <ol class="prova">
 
             <!-- Q1 -->
-            <li id="q1">
-              <div class="enunciado">
-                <strong>Os espectros de energia das radiações podem ser classificados em dois grupos: espectro formado por linhas discretas ou espectro contínuo.</strong>
-                <p>Para cada fonte de radiação da lista dada abaixo, indique se a melhor descrição é <strong>linhas discretas</strong> ou <strong>contínuo</strong>:</p>
-                <ol class="sub">
-                  <li>Partículas alfa</li>
-                  <li>Partículas beta</li>
-                  <li>Raios gama</li>
-                  <li>Raios-X característicos</li>
-                  <li>Elétrons de conversão interna</li>
-                  <li>Elétrons Auger</li>
-                  <li>Fissão espontânea</li>
-                  <li>Bremsstrahlung</li>
-                  <li>Radiação de aniquilação</li>
-                </ol>
-              </div>
+<li id="q1">
+  <div class="enunciado">
+    <strong>Os espectros de energia das radiações podem ser classificados em dois grupos: espectro formado por linhas discretas ou espectro contínuo.</strong>
+    <p>Para cada fonte de radiação da lista dada abaixo, indique se a melhor descrição é <strong>linhas discretas</strong> ou <strong>contínuo</strong>:</p>
+
+    <ol class="sub" style="columns: 3; -webkit-columns: 3; -moz-columns: 3; list-style-position: inside; padding-left: 10px;">
+      <li>Partículas alfa</li>
+      <li>Partículas beta</li>
+      <li>Raios gama</li>
+      <li>Raios-X característicos</li>
+      <li>Elétrons de conversão interna</li>
+      <li>Elétrons Auger</li>
+      <li>Fissão espontânea</li>
+      <li>Bremsstrahlung</li>
+      <li>Radiação de aniquilação</li>
+    </ol>
+  </div>
+
 
 <div class="resposta">
   <strong>Resposta 1. (Resumo em tabela)</strong>
@@ -237,23 +239,60 @@
     <thead>
       <tr>
         <th>Fonte de radiação</th>
-        <th>Espectro</th>
+        <th>Tipo de espectro</th>
         <th>Justificativa breve</th>
       </tr>
     </thead>
     <tbody>
-      <tr><td>Partículas alfa</td><td>Discreto</td><td>Emissão monoenergética</td></tr>
-      <tr><td>Partículas beta</td><td>Contínuo</td><td>Energia dividida com antineutrino</td></tr>
-      <tr><td>Raios gama</td><td>Discreto</td><td>Transições nucleares específicas</td></tr>
-      <tr><td>Raios-X característicos</td><td>Discreto</td><td>Transições entre camadas eletrônicas</td></tr>
-      <tr><td>Elétrons de conversão interna</td><td>Discreto</td><td>Ejetados com energia definida (Q − B)</td></tr>
-      <tr><td>Elétrons Auger</td><td>Discreto</td><td>Rearranjo eletrônico</td></tr>
-      <tr><td>Fissão espontânea</td><td>Contínuo</td><td>Fragmentos com ampla faixa de energias</td></tr>
-      <tr><td>Bremsstrahlung</td><td>Contínuo</td><td>Desaceleração contínua em campo elétrico</td></tr>
-      <tr><td>Radiação de aniquilação</td><td>Discreto</td><td>Dois fótons de 0,511 MeV</td></tr>
+      <tr>
+        <td>Partículas alfa</td>
+        <td>Discreto</td>
+        <td>Emitidas com energias específicas características do núcleo-pai.</td>
+      </tr>
+      <tr>
+        <td>Partículas beta</td>
+        <td>Contínuo</td>
+        <td>Energia compartilhada entre elétron e neutrino, resultando em faixa contínua.</td>
+      </tr>
+      <tr>
+        <td>Raios gama</td>
+        <td>Discreto</td>
+        <td>Emitidos em energias fixas correspondentes a transições nucleares.</td>
+      </tr>
+      <tr>
+        <td>Raios-X característicos</td>
+        <td>Discreto</td>
+        <td>Originados de transições eletrônicas entre camadas atômicas com energias fixas.</td>
+      </tr>
+      <tr>
+        <td>Elétrons de conversão interna</td>
+        <td>Discreto</td>
+        <td>Ejetados com energia definida (energia nuclear menos energia de ligação).</td>
+      </tr>
+      <tr>
+        <td>Elétrons Auger</td>
+        <td>Discreto</td>
+        <td>Emitidos com energias determinadas por transições eletrônicas internas.</td>
+      </tr>
+      <tr>
+        <td>Fissão espontânea</td>
+        <td>Contínuo</td>
+        <td>Produz amplo espectro de energias devido à partição aleatória dos fragmentos.</td>
+      </tr>
+      <tr>
+        <td>Bremsstrahlung</td>
+        <td>Contínuo</td>
+        <td>Decorre da desaceleração de partículas carregadas, gerando espectro contínuo.</td>
+      </tr>
+      <tr>
+        <td>Radiação de aniquilação</td>
+        <td>Discreto</td>
+        <td>Produz fótons de energia fixa (511 keV) por aniquilação elétron-pósitron.</td>
+      </tr>
     </tbody>
   </table>
 </div>
+
 
    </li>
 
