Update PDF link and filename in HTML

--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -199,10 +199,10 @@
           <span>
             PDF:
             <a
-              href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/4th_Lista_2.pdf"
+              href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/4th_Lista2.pdf"
               target="_blank"
               rel="noopener"
-            >4th_Lista_2.pdf</a>
+            >4th_Lista2.pdf</a>
           </span>
         </div>
 
